--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --font-montserrat: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
+}
+
+/* Global Styles */
+html,
+body {
+  font-family: var(--font-montserrat);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden; /* Menambahkan overflow-x hidden untuk mencegah scroll horizontal */
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit; /* Pastikan semua elemen menggunakan box-sizing border-box */
+  scroll-behavior: smooth;
+}
+
+/* Menghindari elemen melampaui lebar viewport */
+body {
+  width: 100vw; /* Memastikan body tidak lebih lebar dari layar */
+  overflow-x: hidden; /* Menonaktifkan scroll horizontal */
+}
+
+/* Mengatur halaman untuk perangkat kecil */
+@media (max-width: 768px) {
+  /* Memastikan elemen fleksibel dan responsif */
+  html,
+  body {
+    width: 100%;
+  }
+}
